--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_script:
     fi;
 
 script:
-  - source tests/tests_cwl.sh bedGraphToBigWig
+  - source tests/tests_cwl.sh bedtobeddb
 
 after_success:
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
